[package]
name = "trithemius"
version = "0.1.0"
authors = ["Jack Lund <jackl@geekheads.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
repl-rs = "0.2.4"
clap = "2.33.3"
futures = "0.3.6"
sodiumoxide = "0.2.6"
rpassword = "5.0.0"
dirs = "3.0.1"
serde = "1.0.117"
serde_derive = "1.0.117"
rmp-serde = "0.14.4"

[dependencies.tokio-serde]
version = "0.6.1"
git = "https://github.com/jacklund/tokio-serde.git"
features = ["messagepack"]

[dependencies.tokio]
version = "0.3.0"
features = ["full"]

[dependencies.tokio-util]
version = "0.4.0"
features = ["full"]
