[package]
name = "trithemius"
version = "0.1.0"
authors = ["Jack Lund <jackl@geekheads.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
repl-rs = "0.2.4"
clap = "2.33.3"
futures = "0.3.13"
sodiumoxide = "0.2.6"
rpassword = "5.0.1"
dirs = "3.0.1"
serde = "1.0.124"
serde_derive = "1.0.124"
rmp-serde = "0.15.4"
hex = "0.4.3"
bytes = "1.0.1"
slog = "2.7.0"
slog-term = "2.8.0"
slog-async = "2.6.0"
log = "0.4.14"
futures-util = "0.3.13"

[dependencies.tokio-stream]
version = "0.1.4"
features = ["io-util"]

[dependencies.tokio-serde]
version = "0.8.0"
features = ["messagepack"]

[dependencies.tokio]
version = "1.3.0"
features = ["full"]

[dependencies.tokio-util]
version = "0.6.4"
features = ["full"]

[dev-dependencies]
tempfile = "3.2.0"
rand = "0.8.3"
